feat: bridge Fabric Screen Handler API v1