@@ -1,6 +1,7 @@
 package dev.loaderbridge.api;
 
 import java.nio.file.Path;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -19,7 +20,10 @@ public record ModInspection(
         Objects.requireNonNull(modId, "modId");
         Objects.requireNonNull(version, "version");
         Objects.requireNonNull(environment, "environment");
-        entrypoints = Map.copyOf(entrypoints);
+        LinkedHashMap<String, List<String>> sortedEntrypoints = new LinkedHashMap<>();
+        entrypoints.entrySet().stream().sorted(Map.Entry.comparingByKey()).forEach(entry ->
+                sortedEntrypoints.put(entry.getKey(), List.copyOf(entry.getValue())));
+        entrypoints = java.util.Collections.unmodifiableMap(sortedEntrypoints);
         diagnostics = List.copyOf(diagnostics);
     }
 }
